syntax = "proto3";

package broker.v1;

import "google/api/annotations.proto";

option go_package = "github.com/8thgencore/message-broker/pkg/pb/broker/v1;brokerv1";

service BrokerService {
  // PublishMessage публикует сообщение в указанную очередь
  rpc PublishMessage(PublishMessageRequest) returns (PublishMessageResponse) {
    option (google.api.http) = {
      post: "/v1/queues/{queue_name}/messages"
      body: "message"
    };
  }

  // Subscribe создает подписку на указанную очередь
  rpc Subscribe(SubscribeRequest) returns (stream Message) {
    option (google.api.http) = {
      post: "/v1/queues/{queue_name}/subscriptions"
    };
  }
}

message PublishMessageRequest {
  string queue_name = 1;
  Message message = 2;
}

message PublishMessageResponse {
  string message_id = 1;
}

message SubscribeRequest {
  string queue_name = 1;
}

message Message {
  string id = 1;
  bytes data = 2;
}
